kqed_dev4/src/objects/Program__c.object
<CustomObject>
    <description>These are the programs that are showing on TV or playing on the radio.</description>
    <fields>
        <fullName>PBS_Program_Code__c</fullName>
        <label>PBS Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_1__c</fullName>
        <description>Interest 1</description>
        <inlineHelpText>Interest 1</inlineHelpText>
        <label>Interest 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_2__c</fullName>
        <description>Interest 2</description>
        <inlineHelpText>Interest 2</inlineHelpText>
        <label>Interest 2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_3__c</fullName>
        <description>Interest 3</description>
        <inlineHelpText>Interest 3</inlineHelpText>
        <label>Interest 3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program_description__c</fullName>
        <description>Program Description</description>
        <inlineHelpText>Program Description</inlineHelpText>
        <label>Program Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program_type__c</fullName>
        <inlineHelpText>Program Genre for each program type i.e. Childrens, British Comedy</inlineHelpText>
        <label>Program Genre</label>
        <picklist>
            <picklistValues>
                <fullName>British Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How-To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructional TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performing Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs (local)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs (national)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Use Only - Major Gift Prog.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Porgramming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money/Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diet/Nutrition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>program_type_value__c</fullName>
        <description>Program Type</description>
        <inlineHelpText>Program Type</inlineHelpText>
        <label>Program Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_program_id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Program Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Program/Show</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>program_description__c</columns>
        <columns>PBS_Program_Code__c</columns>
        <columns>program_type__c</columns>
        <columns>ta_program_id__c</columns>
        <columns>interest_1__c</columns>
        <columns>interest_2__c</columns>
        <columns>interest_3__c</columns>
        <columns>program_type_value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2011 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs/Shows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>